# pt-general-go/internal/db/sqlc/booking_request_query.sql.go
@@ -1,0 +1,45 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+// source: booking_request_query.sql
+
+package db
+
+import (
+	"context"
+)
+
+const createBookingRequest = `-- name: CreateBookingRequest :one
+INSERT INTO booking_requests (
+    name,
+    phone
+)
+VALUES (
+    $1,
+    $2
+)
+RETURNING
+  id,
+  name,
+  phone,
+  created_at,
+  updated_at
+`
+
+type CreateBookingRequestParams struct {
+	Name  string
+	Phone string
+}
+
+func (q *Queries) CreateBookingRequest(ctx context.Context, arg CreateBookingRequestParams) (BookingRequest, error) {
+	row := q.db.QueryRow(ctx, createBookingRequest, arg.Name, arg.Phone)
+	var i BookingRequest
+	err := row.Scan(
+		&i.ID,
+		&i.Name,
+		&i.Phone,
+		&i.CreatedAt,
+		&i.UpdatedAt,
+	)
+	return i, err
+}
