# pt-general-go/internal/handler/dto/booking.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateBookingResponse struct {
+	RedirectURL string `json:"redirect_url" example:"https://stripe.com"`
+}
