# pt-general-go/internal/handler/routes.go
@@ -97,5 +97,10 @@ func (h *Handler) SetupRoutes() *gin.Engine {
 		}
 	}
 
+	bookings := general.Group("/bookings")
+	{
+		bookings.POST("", h.CreateBookingRequest)
+	}
+
 	return router
 }
